--- a/.github/workflows/5main.yml
+++ b/.github/workflows/5main.yml
@@ -1,4 +1,4 @@
-name: XBuild OTX Server 2 - Windows x64  
+name: Build OTX Server 2 - Windows x64 Release  
   
 on: [push, pull_request]  
   
@@ -23,37 +23,31 @@ jobs:
       run: |  
         choco install boost-msvc-14.3 --version=1.84.0 -y  
       
-    - name: Cache MSBuild  
-      uses: actions/cache@v4  
-      with:  
-        path: |  
-          sources/msvc/x64  
-          sources/msvc/*.pdb  
-        key: msbuild-${{ hashFiles('sources/msvc/**/*.vcxproj', 'sources/**/*.cpp', 'sources/**/*.h') }}  
-        restore-keys: |  
-          msbuild-  
-      
     - name: Build x64 Release  
       run: |  
         cd sources/msvc  
-        msbuild TheOTXServer.vcxproj /p:Configuration=Release /p:Platform=x64 /p:OutDir=..\..\build\ /m  
+        msbuild TheOTXServer.vcxproj /p:Configuration=Release /p:Platform=x64 /m  
       
-    - name: Collect DLLs  
+    - name: Collect Release Files  
       run: |  
-        mkdir artifacts  
-        # Copiar executável  
-        copy build\TheOTXServer.exe artifacts\  
+        mkdir release  
           
-        # Copiar DLLs do Boost  
-        copy "C:\local\boost_1_84_0\lib64-msvc-14.3\*.dll" artifacts\ 2>nul || echo "No Boost DLLs found"  
+        # Copiar executável principal  
+        copy "sources\msvc\x64\Release\TheOTXServer.exe" release\  
           
-        # Copiar DLLs do sistema (se necessário)  
-        copy "C:\Windows\System32\msvcp*.dll" artifacts\ 2>nul || echo "No MSVC runtime DLLs needed"  
-        copy "C:\Windows\System32\vcruntime*.dll" artifacts\ 2>nul || echo "No VC runtime DLLs needed"  
+        # Copiar DLLs necessárias do SDK  
+        copy "sources\otx-windows-sdk\lib64-msvc-14.3\*.dll" release\ 2>nul || echo "No SDK DLLs found"  
+        copy "sources\otx-windows-sdk\libxml2\lib64\*.dll" release\ 2>nul || echo "No libxml2 DLLs found"  
+        copy "sources\otx-windows-sdk\mysql-connector-c\lib64\*.dll" release\ 2>nul || echo "No MySQL DLLs found"  
+        copy "sources\otx-windows-sdk\openssl\lib64\*.dll" release\ 2>nul || echo "No OpenSSL DLLs found"  
+        copy "sources\otx-windows-sdk\lua\lib64\*.dll" release\ 2>nul || echo "No Lua DLLs found"  
+          
+        # Listar arquivos coletados  
+        dir release  
       
-    - name: Upload Artifacts  
+    - name: Upload Release Artifacts  
       uses: actions/upload-artifact@v4  
       with:  
-        name: otx-server-2-windows-x64  
-        path: artifacts/  
-        retention-days: 30
+        name: otx-server-2-v2.16-windows-x64  
+        path: release/  
+        retention-days: 90
