--- a/.github/workflows/5main.yml
+++ b/.github/workflows/5main.yml
@@ -6,39 +6,50 @@ jobs:
   build:  
     runs-on: windows-latest  
     steps:  
-    - uses: actions/checkout@v4  
-      
+    - name: Checkout with submodules  
+      uses: actions/checkout@v4  
+      with:  
+        submodules: recursive  
+          
     - name: Setup MSBuild  
       uses: microsoft/setup-msbuild@v2  
-      
+        
     - name: Cache Boost  
+      id: cache-boost  
       uses: actions/cache@v4  
       with:  
         path: C:\local\boost_1_84_0  
         key: boost-1.84.0-msvc-14.3-x64  
-      
+          
     - name: Install Boost  
       if: steps.cache-boost.outputs.cache-hit != 'true'  
       run: choco install boost-msvc-14.3 --version=1.84.0 -y  
-      
+        
     - name: Build  
       run: |  
         cd sources/msvc  
         msbuild TheOTXServer.vcxproj /p:Configuration=Release /p:Platform=x64 /m  
-      
+          
+    - name: Verify Build  
+      run: |  
+        if (!(Test-Path "sources\msvc\x64\Release\TheOTXServer.exe")) {  
+          throw "Build failed - executable not found"  
+        }  
+        Write-Host "Build successful - executable found"  
+          
     - name: Package Release  
       run: |  
         mkdir dist  
         copy sources\msvc\x64\Release\TheOTXServer.exe dist\  
-        copy ..\otx-windows-sdk\lua\lib64\lua51.dll dist\  
-        copy ..\otx-windows-sdk\libxml2\lib64\libxml2.dll dist\  
-        copy ..\otx-windows-sdk\mpir\lib64\mpir.dll dist\  
-        copy ..\otx-windows-sdk\mysql-connector-c\lib64\libmysql.dll dist\  
-        copy ..\otx-windows-sdk\openssl\lib64\libeay32.dll dist\  
-        copy ..\otx-windows-sdk\openssl\lib64\ssleay32.dll dist\  
-        copy ..\otx-windows-sdk\libiconv\lib64\iconv.dll dist\  
-      
-    - name: Upload  
+        copy sources\otx-windows-sdk\lua\lib64\lua51.dll dist\  
+        copy sources\otx-windows-sdk\libxml2\lib64\libxml2.dll dist\  
+        copy sources\otx-windows-sdk\mpir\lib64\mpir.dll dist\  
+        copy sources\otx-windows-sdk\mysql-connector-c\lib64\libmysql.dll dist\  
+        copy sources\otx-windows-sdk\openssl\lib64\libeay32.dll dist\  
+        copy sources\otx-windows-sdk\openssl\lib64\ssleay32.dll dist\  
+        copy sources\otx-windows-sdk\libiconv\lib64\iconv.dll dist\  
+          
+    - name: Upload Artifact  
       uses: actions/upload-artifact@v4  
       with:  
         name: otx-server-windows-x64  
