--- a/.github/workflows/5main.yml
+++ b/.github/workflows/5main.yml
@@ -1,4 +1,4 @@
-name: Build OTX Server 2  
+name: xBuild OTX Server 2  
   
 on: [push, pull_request]  
   
@@ -25,6 +25,28 @@ jobs:
       if: steps.cache-boost.outputs.cache-hit != 'true'  
       run: choco install boost-msvc-14.3 --version=1.84.0 -y  
         
+    - name: Debug Directory Structure  
+      run: |  
+        Write-Host "Current directory:"  
+        Get-Location  
+        Write-Host "=== Root directory contents ==="  
+        Get-ChildItem -Name  
+        Write-Host "=== Looking for SDK and Lua files recursively ==="  
+        Get-ChildItem -Recurse -Name | Where-Object { $_ -like "*lua*" -or $_ -like "*sdk*" -or $_ -like "*dll*" } | Sort-Object  
+        Write-Host "=== Sources directory structure ==="  
+        if (Test-Path "sources") {  
+          Get-ChildItem sources -Recurse -Name | Sort-Object  
+        } else {  
+          Write-Host "Sources directory not found!"  
+        }  
+        Write-Host "=== Looking specifically for otx-windows-sdk ==="  
+        if (Test-Path "sources/otx-windows-sdk") {  
+          Write-Host "Found sources/otx-windows-sdk directory"  
+          Get-ChildItem "sources/otx-windows-sdk" -Recurse -Name | Sort-Object  
+        } else {  
+          Write-Host "sources/otx-windows-sdk directory NOT found"  
+        }  
+        
     - name: Build  
       run: |  
         cd sources/msvc  
@@ -41,13 +63,26 @@ jobs:
       run: |  
         mkdir dist  
         copy sources\msvc\x64\Release\TheOTXServer.exe dist\  
-        copy sources\otx-windows-sdk\lua\lib64\lua51.dll dist\  
-        copy sources\otx-windows-sdk\libxml2\lib64\libxml2.dll dist\  
-        copy sources\otx-windows-sdk\mpir\lib64\mpir.dll dist\  
-        copy sources\otx-windows-sdk\mysql-connector-c\lib64\libmysql.dll dist\  
-        copy sources\otx-windows-sdk\openssl\lib64\libeay32.dll dist\  
-        copy sources\otx-windows-sdk\openssl\lib64\ssleay32.dll dist\  
-        copy sources\otx-windows-sdk\libiconv\lib64\iconv.dll dist\  
+          
+        # Verificar cada DLL individualmente antes de copiar  
+        $dlls = @(  
+          "sources\otx-windows-sdk\lua\lib64\lua51.dll",  
+          "sources\otx-windows-sdk\libxml2\lib64\libxml2.dll",  
+          "sources\otx-windows-sdk\mpir\lib64\mpir.dll",  
+          "sources\otx-windows-sdk\mysql-connector-c\lib64\libmysql.dll",  
+          "sources\otx-windows-sdk\openssl\lib64\libeay32.dll",  
+          "sources\otx-windows-sdk\openssl\lib64\ssleay32.dll",  
+          "sources\otx-windows-sdk\libiconv\lib64\iconv.dll"  
+        )  
+          
+        foreach ($dll in $dlls) {  
+          if (Test-Path $dll) {  
+            Write-Host "Copying $dll"  
+            copy $dll dist\  
+          } else {  
+            Write-Host "WARNING: $dll not found - skipping"  
+          }  
+        }  
           
     - name: Upload Artifact  
       uses: actions/upload-artifact@v4  
