--- a/.github/workflows/6main.yml
+++ b/.github/workflows/6main.yml
@@ -1,36 +1,26 @@
-name: xxBuild OTX Server Windows x64  
+name: Build OTX Server  
 on: [push, pull_request]  
   
 jobs:  
-  build-windows-x64:  
+  build:  
     runs-on: windows-latest  
     steps:  
       - uses: actions/checkout@v4  
         
-      - name: Install Chocolatey  
+      - name: Download Boost 1.84.0  
         run: |  
-          Set-ExecutionPolicy Bypass -Scope Process -Force  
-          [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072  
-          iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))  
-        shell: powershell  
-        
-      - name: Download and Install Boost 1.84.0  
-        run: |  
-          # Download Boost 1.84.0 MSVC 14.3 64-bit  
-          Invoke-WebRequest -Uri "https://sourceforge.net/projects/boost/files/boost-binaries/1.84.0/boost_1_84_0-msvc-14.3-64.exe/download" -OutFile "boost_installer.exe"  
-            
-          # Install Boost silently to C:\local\boost_1_84_0  
-          Start-Process -FilePath "boost_installer.exe" -ArgumentList "/S", "/D=C:\local\boost_1_84_0" -Wait  
+          Invoke-WebRequest -Uri "https://sourceforge.net/projects/boost/files/boost-binaries/1.84.0/boost_1_84_0-msvc-14.3-64.exe/download" -OutFile "boost.exe"  
+          Start-Process -FilePath "boost.exe" -ArgumentList "/S", "/D=C:\local\boost_1_84_0" -Wait  
         shell: powershell  
         
       - name: Setup MSBuild  
         uses: microsoft/setup-msbuild@v1  
           
-      - name: Build Release x64  
+      - name: Build  
         run: msbuild sources/msvc/TheOTXServer.vcxproj /p:Configuration=Release /p:Platform=x64  
           
-      - name: Upload Executable Artifact  
+      - name: Upload Artifact  
         uses: actions/upload-artifact@v4  
         with:  
-          name: TheOTXServer-x64  
+          name: TheOTXServer  
           path: sources/msvc/x64/Release/TheOTXServer.exe
