--- a/.github/workflows/6main.yml
+++ b/.github/workflows/6main.yml
@@ -1,4 +1,4 @@
-name: xxxBuild OTX Server  
+name: Build OTX Server  
 on: [push, pull_request]  
   
 jobs:  
@@ -7,22 +7,21 @@ jobs:
     steps:  
       - uses: actions/checkout@v4  
         
-      - name: Download Boost 1.84.0  
+      - name: Install Boost via Chocolatey  
         run: |  
-          try {  
-            Invoke-WebRequest -Uri "https://sourceforge.net/projects/boost/files/boost-binaries/1.84.0/boost_1_84_0-msvc-14.3-64.exe/download" -OutFile "boost.exe" -UserAgent "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36"  
-            Start-Process -FilePath "boost.exe" -ArgumentList "/S", "/D=C:\local\boost_1_84_0" -Wait  
-          } catch {  
-            Write-Error "Failed to download Boost: $_"  
-            exit 1  
+          choco install boost-msvc-14.3 --version=1.84.0 -y  
+          # Criar link simbólico para o caminho esperado pelo projeto  
+          if (!(Test-Path "C:\local")) { New-Item -ItemType Directory -Path "C:\local" }  
+          if (!(Test-Path "C:\local\boost_1_84_0")) {  
+            New-Item -ItemType SymbolicLink -Path "C:\local\boost_1_84_0" -Target "C:\ProgramData\chocolatey\lib\boost-msvc-14.3\tools"  
           }  
         shell: powershell  
-        
+          
       - name: Setup MSBuild  
-        uses: microsoft/setup-msbuild@v1  
+        uses: microsoft/setup-msbuild@v2  
           
       - name: Build  
-        run: msbuild sources/msvc/TheOTXServer.vcxproj /p:Configuration=Release /p:Platform=x64  
+        run: msbuild sources/msvc/TheOTXServer.vcxproj /p:Configuration=Release /p:Platform=x64 /m  
           
       - name: Upload Artifact  
         uses: actions/upload-artifact@v4  
